--- a/app/views/tracks/show.erb
+++ b/app/views/tracks/show.erb
@@ -1,6 +1,6 @@
 <h1> <%= @track.song_title %> </h1>
 
-<p>
+<p class="lead">
 	By: <%= @track.author %>
 </p>
 
@@ -11,9 +11,10 @@
 		Posted by:
 	<% end %>
 </p>
+<p><%= @track.like_count %> likes </p>
 
 <p>
-	<%= @track.url %>
+	<a href="<%= @track.url %>"> <%= @track.url %> </a>
 </p>
 
 <p>
@@ -21,37 +22,38 @@
 </p>
 
 <p>
-	<% if current_user %>
-		<% if current_user.reviews.count > 1%>
-
-		<% else %>
+	<% if current_user && !allow_new_comment %>
 			Please add a review!
 			<form action="/reviews" method="post">
 				<input type="hidden" name="track_id" value="<%=@track.id%>">
-				<textarea rows="3" cols="100" type="text" name="text"></textarea>
-				<button class = "button" type="submit">Submit </button>
+				<textarea class="form-control" rows="4" cols="100" type="text" name="text"></textarea></br>
+				Rating:
+				<select class="form-control" name="rating">
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
+				<button class = "button" type="submit">Submit</button>
 			</form>
-		<% end %>
-	<% else %>
-		<b>You must sign in to leave a review!</b>
 	<% end %>
 </p>
 
 <hr/>
 
-
-<% @track.reviews.each do |review| %>
-	<p>
-		<%= review.user.username%>:<%= review.text %>
-		<% if current_user && review.user_id == current_user.id %>
+	<% @track.reviews.each do |review| %>
+		<strong><%= review.user.username%></strong></br> 
+		<footer><small>Rating: <%= review.rating %></small></footer></br>
+		<p class="lead">"<%= review.text %>" </p>
+		 <% if current_user && review.user_id == current_user.id %>
 				<form action="/reviews/<%= review.id %>" method="post">
 					<input name="_method" type="hidden" value="delete">
        		<button class="button" type="submit">
            	Delete post
        		</button>
 				</form>
-		<% end %>
-	</p>
+		<% end %> 
 <% end %>
 
 <hr/>
