--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,16 +1,22 @@
 <h2>Login</h2>
 
-<form action="/login" method="POST">
+<form class="form=horizontal" action="/login" method="POST">
     <%= @error_message if @error_message %>
     <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username">
+        <label class="col-sm-2 control-label" for="username">Username</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="username" name="username">
+        </div>
     </div>
     <div class="form-group">
-        <label for="password"> Password</label>
-        <input type="password" id="password" name="password">
+        <label class="col-sm-2 control-label" for="password"> Password</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" id="password" name="password">
+        </div>
     </div>
     <div class="form-group">
-        <button class="button" type="submit"> Login </button>  
+        <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default" type="submit"> Login </button>  
+        </div>
     </div>
 </form>
