--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -6,24 +6,35 @@
     <% end %>
 </ul>
 
-<form method="POST" action="/signup">
+<form class="form=horizontal" method="POST" action="/signup">
     <div class="form-group"> 
-    <label for="email"> Email</label>
-    <input type = "email" id="email" name="email" value="<%= @user.email %>">
+        <label class="col-sm-2 control-label" for="email"> Email</label>
+        <div class="col-sm-10">
+            <input class="form-control" type = "email" id="email" name="email" value="<%= @user.email %>">
+        </div>
     </div>
     
     <div class="form-group">
-    <label for="username"> Username</label>
-    <input type= "text" id="username" name="username" value="<%= @user.username %>">
+        <label class="col-sm-2 control-label" for="username"> Username</label>
+        <div class="col-sm-10">
+            <input class="form-control" type="text" id="username" name="username" value="<%= @user.username %>">
+        </div>
     </div>
     
     <div class="form-group">
-    <label for="password"> Password</label>
-    <input type= "password" id="password" name="password">
+        <label class="col-sm-2 control-label" for="password"> Password</label>
+        <div class="col-sm-10">
+            <input class="form-control" type= "password" id="password" name="password">
+        </div>
     </div>
     
     <div class="form-group">
-    <button type="submit"> Signup</button>
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn.link"> Signup</button>
+        </div>
     </div>
 
 </form>
+
+<hr/>
+<a href="/tracks">Back to All Tracks</a>
