--- a/app/views/tracks/new.erb
+++ b/app/views/tracks/new.erb
@@ -9,20 +9,31 @@
   </div>
 <% end %>
 
-<form method="post" action="/tracks">
-  <div>
-    <label>Song Title:</label>
-    <input type="text" name="song_title">
+<form class="form=horizontal" method="post" action="/tracks">
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Song Title:</label>
+    <div class="col-sm-10">
+      <input type="text" class ="form-control" name="song_title">
+    </div>
   </div>
-  <div>
-    <label>Author:</label>
-    <input type="text" name="author">
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Author:</label>
+    <div class="col-sm-10">
+      <input type="text" class ="form-control" name="author">
+    </div>
   </div>
-  <div>
-    <label>Url:</label>
-    <input type="text" name="url"
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Url:</label>
+    <div class="col-sm-10">
+      <input type="text" class ="form-control" name="url">
+    </div>
   </div>
-  <div>
-    <input type="submit" value="Submit">
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Submit</button>
+    </div>
   </div>
 </form>
+
+<hr/>
+<a href="/tracks">Back to All Tracks</a>
